# ecommerce

./: .gitignore  Dockerfile  Readme.md  ecommerce.postman_collection.json  pyproject.toml
shop/: app.py
shop/config/: app_config.py  database.py
shop/core/: inititalize_database.py
shop/exceptions/: outofstock_exception.py  product_not_found_exception.py
shop/models/: base_model.py  orders.py  product.py
shop/repository/: order_repository.py  product_repository.py
shop/requestForms/: create_order_request.py  create_product_request.py
shop/routeHandlers/: orders_handler.py  products_handler.py
shop/services/: order_service.py  product_service.py
shop/utilities/: response.py
tests/api/: test_orders_api.py  test_products_api.py
tests/requestForms/: create_order_request_test.py
tests/service/: order_service_test.py  product_service_test.py
